# capstone

./: .gitignore  Dockerfile  README.md  kube-delete.sh  kube-setup.sh  kube-start.sh  kube-stop.sh  launch-kube.sh  requirements.txt  run.sh  setup-db.sh  setup-kube.sh  setup-mac.sh  stop-kube.sh
.devcontainer/: Dockerfile  devcontainer.json
data/: AD_diagnosis_and_death_dates.csv  AD_time_to_dx.csv  adni_patient_scan_dates.csv  clinical_training_data.csv  clinical_training_data_with_medhist.csv  clinical_training_data_with_medhist_famhist.csv  complete_snp.csv  db_data.csv  genetic_iid_data.csv
data/DB_DATA_JSON/: db_data_converted.json  db_data_converted_part_1.json  db_data_converted_part_2.json  db_data_converted_part_3.json  db_data_full.json
data/Medical_History/: BLSCHECK_11Sep2023.csv  DXSUM_PDXCONV_ADNIALL_15Sep2023.csv  (+4 more)
db_container/: Dockerfile  init.sql
kubernetes/: deployment.yaml  service.yaml
notebooks/: Alzheimer Study.ipynb  Alzheimers_Data_EDA.ipynb  Alzheimers_Study_MRI_Model.ipynb  Clinical_Genetic_Models.ipynb  Medical_History_EDA.ipynb  SVM_NN_clinical_genetic.ipynb  SVM_clinical_genetic.ipynb  \datadni_patient_scan_dates.csv  classification_notebook.ipynb  db_data_convert.ipynb  model.pkl  multimodal.ipynb  multimodal_embeddings.ipynb  multimodal_embeddings_no_pooling.ipynb  multimodal_embeddings_with_pooling.ipynb  multimodal_revised_approach.ipynb  multimodal_simple.ipynb
project/: Dockerfile  pyproject.toml
project/.ipynb_checkpoints/: genetic_processing-checkpoint.ipynb
project/src/: main.py
project_container/: Dockerfile
(+64 files in other folders)
