[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Jack <jgalvin@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^7.0.3"
pandas = "^2.1.0"
pandas-plink = "^2.2.9"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
